welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: not found: value compteur
  }while (compteur= 5)
          ^Poucet:13: error: not found: value baggle
  	if (baggle<=2)
            ^Poucet:16: error: not found: value baggle
  	if (baggle>=2)
            ^